# loops

./: README.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yaml  justfile  pyproject.toml
backend/.github/: PULL_REQUEST_TEMPLATE.md
backend/.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
backend/.github/workflows/: ci.yml  deploy.yml  project-automation.yml
backend/.serena/: project.yml
backend/docs/: CARD_SELECTION_ALGORITHM.md  COMMANDS.md  DATABASE.md  DEPLOYMENT.md  PROJECT_GRADING_REQUIREMENTS.md  PROJECT_MANAGEMENT.md  README.md  SECURITY_AUDIT.md  TESTING.md  TROUBLESHOOTING.md  data_collecting.md
backend/docs/user-stories/: 01-authentication.md  02-profile.md  03-vocabulary-cards.md  04-decks.md  07-statistics.md  08-study-session.md  README.md
backend/src/alembic/: env.py
backend/src/alembic/versions/: 0dc1f3eefd7a_baseline_unknown_remote_revision.py  1da20884d6da_add_word_type_to_vocabulary_cards.py  2a3b4c5d6e7f_add_review_ratio_settings_to_profile.py  3b4c5d6e7f8g_add_review_scope_to_profile.py  3cc3b28e5a94_initial_clean_schema.py  4c5d6e7f8g9h_add_related_words_to_vocabulary_cards.py  58f07e279e66_add_word_tutor_chat.py  5d6e7f8g9h0i_add_wrong_answers_table.py  5e0888ee7d18_add_new_cards_count_and_review_cards_.py  65b7c40aca48_add_cloze_sentences_to_vocabulary_cards.py  6e7f8g9h0i1j_fix_user_id_uuid_types.py  898ba0c66334_merge_all_heads_into_single_line.py  9f8e7d6c5b4a_add_image_fields_to_vocabulary_cards.py  a1b2c3d4e5f6_add_study_sessions_table.py  a2b3c4d5e6f7_add_highlight_color_to_profiles.py  b1c2d3e4f5g6_refactor_users_to_profiles.py  eccc1f1a2c21_add_all_db_schema_updates_user_settings_.py  f1a2b3c4d5e6_add_total_study_time_minutes_to_user.py
backend/src/app/: config.py  database.py  main.py
backend/src/app/api/: __init__.py  auth.py  cards.py  decks.py  profiles.py  routes.py  stats.py  study.py  tutor.py
backend/src/scripts/: FREQUENCY_MAPPING.md  README.md  collect_data.py  collect_phrases.py  collect_toefl_data.py  enrich_with_gpt.py  generate_card_images.py  generate_cloze.py  map_frequency.py  seed_data.py  seed_via_rest.py  unmatched_words_report.txt  update_cards_via_api.py  verify_data.py
backend/tests/: conftest.py
backend/tests/factories/: __init__.py  base.py  deck_factory.py  profile_factory.py  study_session_factory.py  user_card_progress_factory.py  user_selected_deck_factory.py  vocabulary_card_factory.py  word_tutor_factory.py  wrong_answer_factory.py
backend/tests/unit/: __init__.py  test_database.py  test_main.py  test_schemas.py
frontend/: .gitignore  (+5 more)
(+143 files in other folders)
